assets/sass/main.scss
body {
  margin: 0 auto;
  font-family: sans-serif;
  overflow-x: hidden;
  width: 100vw;
}

main {
  height: 100vh;
  width: 100%;
  overflow-x: hidden;
}



nav {
  position: sticky;
  top: 0px;
  width: 100vw;
  background: #111;
  height: fit-content;
  padding-block: 5px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav h4 {
  color: #fff;
  margin: 0;
}

nav ul {
  list-style: none;
  margin: 0;

  a {
    color: #fff;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }

  li {
    display: inline;
    margin: 0;
    padding: 0;
  }
}



footer {
  background: #f2f2f2;
  padding: 2px 2px;
  font-size: .7em;
  text-align: center;
}

#map {
  height: 300px;
}

h1{
  height: fit-content;
  align-self: flex-start;
  text-align: center;
  
}

p {
  text-align: center;
}



#menu-button {
  display: none;
}

@media (max-width: 768px) {
  
#menu-button {
  display: block;
}

nav {
  position: sticky;
  top: 0;
}

  nav ul {
    width: 100%;
    display: grid;
    justify-content: center;
    text-align: center;
    position: absolute;
    left: 50%;
    transform: translate(-50%);
    background-color: #111;
    z-index: 0;
    top: -500%;
  }

  .show {
  top: 100%;
}
}

